--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,7 +8,7 @@ a.active hr{
 }
 *{
     font-family: Outfit;
-    background: yellowgreen;
+    /* background: yellowgreen; */
 }
 ::-webkit-scrollbar{
     display: none;
